<resources>
    <string name="app_name">MiCarro</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UCE MiAuto</string>
    <string name="nav_header_subtitle">escobar.jose@uce.edu.ec</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Nombres del menu lateral -->
    <string name="menu_home">Auto</string>
    <string name="menu_gallery">Galería Autos</string>
    <string name="menu_slideshow">Consumibles</string>
    <string name="menu_tools">Talleres Autorizados</string>
    <string name="menu_send">Recordatirios</string>
    <string name="menu_share">Gastos</string>

    <string name="identificacion">Identificación</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="telefono">Teléfono</string>
    <string name="lista_Autos">Lista de Autos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_consumibles_5000">5 000 km.</string>
    <string name="textview_consumibles_aceite">Cambio de aceite :</string>
    <string name="textview_consumibles_filtro_motor">Filtro de Motor</string>
    <string name="textview_consumibles_filtro_combustible">Filtro de combustible :</string>
    <string name="textview_consumibles_bujia_encendido">Bujía de encendido :</string>
    <string name="textview_consumibles_liquido_frenos">Líquido de frenos :</string>
    <string name="textview_consumibles_liq_dir_hidraulica">Líquido de dirección hidráulica :</string>
    <string name="calcular">Calcular</string>
    <string name="textview_consumibles_10000">10 000 km.</string>
    <string name="textview_consumibles_filtro_aire">Filtro de aire</string>
    <string name="textview_consumibles_15000">15 000 km.</string>
    <string name="textview_consumibles_20000">20 000 km.</string>
    <string name="textview_consumibles_30000">30 000 km.</string>
    <string name="textview_consumibles_aceite_caja">Aceite de caja de cambios:</string>
    <string name="textview_consumibles_55000">55 000 km.</string>
    <string name="textview_consumibles_60000">60 000 km.</string>
    <string name="textview_consumibles_banda_distribucion">Banda de distribución:</string>
    <string name="textview_consumibles_refrigerante">Refrigrante</string>
    <string name="textview_consumibles_termostato">Termostato</string>
    <string name="Aceptar">Aceptar</string>
    <string name="textview_not_titulo">Notificación</string>
    <string name="textview_not_pregunta1">Usted ya realizó el cambio?</string>
    <string name="textview_not_pregunta2">El costo del cambio fue:</string>

    <string name="textview_talleres_taller1">Taller Chevrolet Vallejo Araujo</string>
    <string name="textview_talleres_taller1_1">Dirección:</string>
    <string name="textview_talleres_taller1_2">Av. 10 de Agosto N29-29 y, Quito 170102</string>
    <string name="textview_talleres_taller1_3">Horario:</string>
    <string name="textview_talleres_taller1_4">Lunes a Viernes (07:30 AM–17:00 PM)</string>
    <string name="textview_talleres_taller1_5">Sábado (07:30 AM–12:30 PM)</string>
    <string name="textview_talleres_taller1_6">Teléfono</string>
    <string name="textview_talleres_taller1_7">1800 827 282</string>

    <string name="textview_talleres_taller2">KIA MOTORS - ASIAUTO SAN BARTOLO</string>
    <string name="textview_talleres_taller2_1">Dirección:</string>
    <string name="textview_talleres_taller2_2">Av. Maldonado N.11672 y Saraguro, El Comercio, Quito 180205</string>
    <string name="textview_talleres_taller2_3">Horario:</string>
    <string name="textview_talleres_taller2_4">Lunes a Viernes (09:30 AM–18:00 PM)</string>
    <string name="textview_talleres_taller2_5">Sábado (10:00 AM–14:00 PM)</string>
    <string name="textview_talleres_taller2_6">Teléfono</string>
    <string name="textview_talleres_taller2_7">(02) 273-5132</string>

    <string name="textview_talleres_taller3">Toyomotors Taller Mecanico Toyota en Quito</string>
    <string name="textview_talleres_taller3_1">Dirección:</string>
    <string name="textview_talleres_taller3_2">Av. Moran Valverde OE3-522 y, Quito 170606</string>
    <string name="textview_talleres_taller3_3">Horario:</string>
    <string name="textview_talleres_taller3_4">Lunes a Viernes (08:00 AM–17:30 PM)</string>
    <string name="textview_talleres_taller3_5">Sábado (08:00 AM–13:00 PM)</string>
    <string name="textview_talleres_taller3_6">Teléfono</string>
    <string name="textview_talleres_taller3_7">099 829 4261</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Mapa</string>
    <string name="consumibles">Consumibles</string>
    <string name="notificacion">Notificación</string>
    <string name="textview_notificacion_aviso">Revise sus consumibles</string>
    <string name="Asignar_Alarma">Asignar Recordatorio</string>
    <string name="lista_mantenimientos">Lista de Mantenimientos</string>
    <string name="lista_autos">Lista de Autos</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_bdd">Almacenar BDD</string>
    <string name="logue_de_usuarios">Logue de Usuarios</string>
    <string name="contrasena">Contraseña</string>
    <string name="registro_usuarios">Registrar Usuario</string>
    <string name="logo">logo</string>
    <string name="regresar">Regresar</string>
    <string name="auto">Auto</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="tema_tesis">APLICACIÓN WEB PARA MONITOREAR LOS CONSUMIBLES DE UN VEHÍCULO MEDIANTE UNA APK</string>
    <string name="iniciar">Iniciar</string>

</resources>
