<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_RegistrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_usuarios"
                android:textAlignment="center"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Identificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/identificacion"
                    android:inputType="number"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/apellido"
                    android:inputType="text"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="number"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/contrasena"
                    android:inputType="numberPassword"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/auto"
                android:textAlignment="center"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Placa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/placa"
                    android:inputType="text"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Marca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/marca"
                    android:inputType="text"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Modelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/modelo"
                    android:inputType="text"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imp_RegistrarUsuario_Kilometraje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_RegistrarUsuario_Kilometraje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/kilometraje"
                    android:inputType="number"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_RegistrarUsuario_Registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registrar_bdd"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/button_RegistrarUsuario_Regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/regresar"
                android:textStyle="bold"
                android:textSize="18dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</LinearLayout>