<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".NotificacionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/notificacion"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_notificacion_aviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_notificacion_aviso"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/menu_lateral"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView_notificacion_espacio_vacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/button_notificacion_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar" />

</LinearLayout>